Prepare v1. re-work annotation builder, work on api